style.css
/* ... */
      .related-posts .video-post .post-details img {
        border-radius: 50px;
        float: left;
        margin-right: 10px; }
      .related-posts .video-post .post-details .post-detail {
        font-family: 'Roboto', sans-serif;
        font-size: 20px;
        font-weight: 300;
        color: #FFFFFF;
        text-transform: none;
        margin-top: 10px;
        border-bottom: 0; }
    .related-posts .video-post .button.white {
      font-size: 22px;
      width: 100%; }

@media screen and (min-width: 0em) and (max-width: 39.9375em) {
  .video-top .video {
    padding-left: 0.625rem; }
  .video-top .article-details {
    padding-right: 0.625rem; }
    .video-top .article-details .article-header {
      min-height: initial;
      height: auto; }

  .post-more {
    padding-left: 0.625rem; } }
@media screen and (min-width: 40em) and (max-width: 63.9375em) {
  .video-top .video {
    padding-left: 0.9375rem; }
  .video-top .article-details {
    padding-right: 0.9375rem; }

  .post-more {
    padding-left: 0.9375rem; } }
/**
***************** V. Comments ************************
*/
/**
* Comments Styles
*
* @package VideoPlace
* @author Jacob Martella
* @version 1.0
*/
.comments-area {
  background-color: rgba(110, 110, 110, 0.3);
  padding: 10px 15px;
  margin-bottom: 15px; }
  .comments-area .comments-title {
    border-bottom: 1px solid #FFFFFF; }
  .comments-area .comment {
    border-bottom: 1px solid #FFFFFF; }
    .comments-area .comment img {
      border-radius: 75px; }
    .comments-area .comment h3 {
      font-family: 'Roboto Slab', serif;
      font-size: 28px;
      font-weight: 400;
      color: #FFFFFF;
      text-transform: none; }
      .comments-area .comment h3 a {
        color: #FFFFFF; }
    .comments-area .comment h5 {
      font-family: 'Roboto', sans-serif;
      font-size: 22px;
      font-weight: 300;
      color: #FFFFFF;
      text-transform: none; }
      .comments-area .comment h5 a {
        color: #FFFFFF; }
    .comments-area .comment .comment-reply-link {
      font-family: 'Roboto', sans-serif;
      font-size: 20px;
      font-weight: 300;
      color: #FFFFFF;
      text-transform: none;
      border: 2px solid #FFFFFF;
      border-radius: 2px;
      color: #FFFFFF;
      padding: 3px 8px; }
      .comments-area .comment .comment-reply-link a {
        color: #FFFFFF; }
      .comments-area .comment .comment-reply-link:hover {
        background-color: #FFFFFF;
        color: #000000; }
    .comments-area .comment label {
      font-family: 'Roboto', sans-serif;
      font-size: 18px;
      font-weight: 300;
      color: #FFFFFF;
      text-transform: none; }
  .comments-area label {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    font-weight: 300;
    color: #FFFFFF;
    text-transform: none; }

/**
***************** VI. Index ************************
*/
/**
* Index Styles
*
* This file contains the styles for both the index and archive templates
*
* @package VideoPlace
* @author Jacob Martella
* @version 1.0
*/
.archive-title {
  font-family: 'Roboto', sans-serif;
  font-size: 40px;
  font-weight: 300;
  color: #FFFFFF;
  text-transform: uppercase;
  border-bottom: 1px solid #FFFFFF;
  text-align: center;
  margin: 0 0 15px 0; }

.archive-video-post {
  background-color: rgba(110, 110, 110, 0.3);
  margin-bottom: 15px;
  padding: 5px 10px 10px 10px; }
  .archive-video-post .post-category {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    font-weight: 300;
    color: #FFFFFF;
    text-transform: uppercase; }
  .archive-video-post .flex-video {
    padding-bottom: 56%;
    margin: 0 -10px; }
  .archive-video-post .title {
    font-family: 'Roboto Slab', serif;
    font-size: 30px;
    font-weight: 400;
    color: #FFFFFF;
    text-transform: none;
    margin-left: 0; }
    .archive-video-post .title a {
      color: #FFFFFF; }
  .archive-video-post .post-details {
    padding-bottom: 3px; }
    .archive-video-post .post-details img {
      border-radius: 50px;
      float: left;
      margin-right: 10px; }
    .archive-video-post .post-details .post-detail {
      font-family: 'Roboto', sans-serif;
      font-size: 20px;
      font-weight: 300;
      color: #FFFFFF;
      text-transform: none;
      margin-top: 10px; }
      .archive-video-post .post-details .post-detail a {
        color: #FFFFFF; }
  .archive-video-post .button.white {
    font-size: 22px;
    width: 100%; }

.page-navigation li {
  border: 2px solid #FFFFFF;
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  font-weight: 300;
  color: #FFFFFF;
  text-transform: uppercase;
  margin-left: 0;
  margin-right: 10px; }
  .page-navigation li a {
    color: #FFFFFF; }
  .page-navigation li:hover {
    background-color: #FFFFFF !important;
    color: #000000; }
    .page-navigation li:hover a {
      background-color: #FFFFFF;
      color: #000000; }
  .page-navigation li.current {
    background-color: #FFFFFF;
    color: #000000; }
    .page-navigation li.current a {
      color: #000000; }

/**
***************** A. Author ************************
*/
.author-bio {
  text-align: center; }
  .author-bio .mugshot {
    margin-bottom: 10px; }
    .author-bio .mugshot img {
      border-radius: 100px; }
  .author-bio .author-name {
    font-family: 'Roboto Slab', serif;
    font-size: 28px;
    font-weight: 400;
    color: #FFFFFF;
    text-transform: none; }
  .author-bio .bio {
    font-size: 16px;
    line-height: 1.4; }
  .author-bio a.button {
    color: #FFFFFF !important;
    width: 100%; }
    .author-bio a.button:hover {
      color: #000000 !important; }

/**
***************** VIII. Pages ************************
*/
/**
* Page Styles
*
* @package VideoPlace
* @author Jacob Martella
* @version 1.0
*/
.page-post .article-header {
  padding-bottom: 15px;
  border-bottom: 1px solid #FFFFFF;
  margin-bottom: 15px; }
  .page-post .article-header .flex-video {
    padding-bottom: 56%;
    margin: 0; }
/* ... */

